<resources>
    <string name="app_name">ЖКХакер</string>
    <string name="phone_hint">Номер телефона</string>
    <string name="pass_hint">Пароль</string>
    <string name="enter">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="fio_hint">ФИО</string>
    <string name="pass_repeat_hint">Повторите пароль</string>
    <string name="code">Код подтверждения</string>
    <string name="code_text">На ваш телефон выслано СМС с кодом подтверждения</string>
    <string-array name="zkh_list">
        <item>Газ</item>
        <item>Вода холодная</item>
        <item>Вода горячая</item>
        <item>Электроэнергия</item>
        <item>Отопление</item>
        <item>Кап. ремонт</item>
        <item>ТБО</item>/
        <item>Канализация</item>/
        <item>Тех. обслуживание</item>/
    </string-array>
    <string name="menu_main">ГЛАВНАЯ</string>
    <string name="menu_order">ЗАЯВКИ</string>
    <string name="menu_bonus">БОНУСЫ</string>
    <string name="menu_info">ИНФОРМАЦИЯ</string>
    <string name="menu_sett">НАСТРОЙКИ</string>
    <string name="all_dept">Общий долг:</string>
    <string name="ruble">р.</string>
    <string name="main_title">Начисления</string>
    <string name="sett_title">Настройки</string>
    <string name="profile_title">Профиль</string>
    <string name="add_title">Добавить лицевой счет</string>
    <string name="surname_hint">Фамилия</string>
    <string name="name_hint">И</string>
    <string name="o_hint">О</string>
    <string name="city_hint">Город</string>
    <string name="street_hint">Улица</string>
    <string name="house_hint">Дом</string>
    <string name="corpse_hint">Корпус</string>
    <string name="flat_hint">Квартира</string>
    <string name="adress">Адрес</string>
    <string name="save_btn">Сохранить</string>
    <string name="profile_save">Профиль успешно сохранен</string>
    <string name="enter_name">Введите ФИО</string>
    <string name="enter_city">Введите город</string>
    <string name="enter_street">Введите улицу</string>
    <string name="enter_house">Введите номер дома</string>
    <string name="bill_hint">Лицевой счет</string>
    <string name="qr_scan">Сканировать \n QR-code</string>
    <string name="score">Счетчик</string>
    <string name="enter_bill">Лицевой счет должен состоять не менее чем из 10 цифр</string>
    <string name="bill_add">Лицевой счет успешно добавлен</string>
    <string name="bill_count">Показания счетчика</string>
    <string name="current_tariff">Текущий тариф:</string>
    <string name="dept_end">Задолженность на конец месяца:</string>
    <string name="dept_begin">Задолженность на начало месяца:</string>
    <string name="enrolled">Начислено:</string>
    <string name="paied">Оплачено:</string>
    <string name="check_internet_toast">Проверьте интернет-соединение</string>
    <string name="error_string">Ошибка</string>
    <string name="info_title">Информация</string>
    <string name="api_host">http://o40714hu.bget.ru/cp/api/</string>
    <string name="progress_dialog_text">Обработка запроса</string>
    <string name="enter_pass">Введите пароль</string>
    <string name="repeat_pass">Повторите пароль</string>
    <string name="pass_not_true">Пароли не совпадают</string>
    <string name="order_title">Заявки</string>
    <string name="exit_dialog">Выйти из приложения?</string>
    <string name="dialog_yes">Да</string>
    <string name="dialog_no">Нет</string>

</resources>
