<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextshape"
        style="@style/myedittext"
        android:padding="10dp"
        android:id="@+id/editfio"
        android:layout_marginBottom="15dp"
        android:hint="@string/fio_hint"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittextshape"
        android:layout_marginBottom="15dp">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/myedittext"
         android:padding="10dp"
         android:text="+7"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        style="@style/myedittext"
        android:padding="10dp"
        android:id="@+id/editphone"

        android:hint="@string/phone_hint"/>
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextshape"
        style="@style/myedittext"
        android:padding="10dp"
        android:id="@+id/editPass"
        android:layout_marginBottom="20dp"
        android:hint="@string/pass_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextshape"
        style="@style/myedittext"
        android:padding="10dp"
        android:id="@+id/editpassrepeat"
        android:layout_marginBottom="20dp"
        android:hint="@string/pass_repeat_hint"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/layoutCode"
        android:visibility="gone">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtCodeText"
        android:text="@string/code_text"
        android:layout_marginBottom="10dp"
        android:textSize="11sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextshape"
        style="@style/myedittext"
        android:padding="10dp"
        android:id="@+id/editcode"
        android:layout_marginBottom="40dp"
        android:hint="@string/code"
        />
    </LinearLayout>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:id="@+id/btnReg"
        android:text="@string/registration"
        android:background="@drawable/btnshapereg"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:drawableRight="@drawable/arrow_yellow"
        />
</LinearLayout>
</ScrollView>