<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/myedittext"
        android:layout_weight="0.5"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextprofile"
        android:padding="10dp"
        android:textSize="16sp"
        android:hint="@string/fio_hint"
        android:id="@+id/editFio"
            android:text="Карапац Наталия Александровна"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/adress"
        android:drawableLeft="@drawable/icon_adress"
        android:drawablePadding="10dp"
        android:layout_marginBottom="15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/myedittext"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextprofile"
        android:padding="10dp"
        android:hint="@string/city_hint"
        android:id="@+id/editCity"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"
        android:text="Махачкала"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/myedittext"
        android:layout_marginRight="15dp"
        android:background="@drawable/edittextprofile"
        android:padding="10dp"
        android:hint="@string/street_hint"
        android:id="@+id/editStreet"
        android:textSize="16sp"
        android:layout_marginBottom="15dp"
        android:text="Гагарина"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/myedittext"
            android:layout_weight="0.3"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextprofile"
            android:padding="10dp"
            android:hint="@string/house_hint"
            android:id="@+id/editHouse"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:inputType="number"
            android:text="76"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/myedittext"
            android:layout_weight="0.3"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextprofile"
            android:padding="10dp"
            android:hint="@string/corpse_hint"
            android:id="@+id/editCorpse"
            android:paddingRight="15dp"
            android:textSize="16sp"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/myedittext"
            android:layout_weight="0.3"
            android:layout_marginRight="15dp"
            android:background="@drawable/edittextprofile"
            android:padding="10dp"
            android:hint="@string/flat_hint"
            android:id="@+id/editFlat"
            android:paddingRight="15dp"
            android:textSize="16sp"
            android:inputType="number"
            android:text="29"/>
    </LinearLayout>



</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnSave"
        android:text="@string/save_btn"
        style="@style/button"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btnshapereg"
        android:drawableRight="@drawable/arrow_white"
        android:layout_gravity="bottom"
        />
</FrameLayout>