<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/edittextprofile"
        android:layout_marginBottom="15dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/myedittext"
            android:padding="10dp"
            android:text="+7"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            style="@style/myedittext"
            android:padding="10dp"
            android:id="@+id/editphone"
            android:inputType="number"
            android:hint="@string/phone_hint"
            android:text="9640040554"
            android:textSize="16sp"
            />
    </LinearLayout>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edittextprofile"
        style="@style/myedittext"
        android:padding="10dp"
        android:id="@+id/editPass"
        android:layout_marginBottom="20dp"
        android:hint="@string/pass_hint"
        android:text="qwerty1Q"
        android:inputType="textPassword"
        android:textSize="16sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:id="@+id/btnEnter"
        android:text="@string/enter"
        android:background="@drawable/btnshapereg"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:drawableRight="@drawable/arrow_white"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:id="@+id/btnReg"
        android:text="@string/registration"
        android:background="@drawable/btnshapereg"
        android:textSize="20sp"
        android:layout_marginBottom="20dp"
        android:drawableRight="@drawable/arrow_white"

        />




</LinearLayout>
