<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/myedittext"
        android:background="@drawable/edittextprofile"
        android:padding="10dp"
        android:textSize="16sp"
        android:hint="@string/bill_hint"
        android:id="@+id/editBill"
        android:layout_marginBottom="15dp"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="20dp">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/edittextprofile"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.5"
            android:padding="10dp"
            android:layout_marginRight="15dp"
            android:id="@+id/layoutQr">
          <TextView
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/txtQr"
              android:textColor="@android:color/black"
              android:text="@string/qr_scan"
              android:gravity="center"
              android:layout_marginBottom="10dp"/>
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/icon_qr"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/edittextprofile"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.5"
            android:padding="20dp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtScore"
                android:textColor="@android:color/black"
                android:text="@string/score"

                android:layout_weight="1"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/switchScore"
                android:textColor="#00000000"
                android:button="@drawable/switchshape"
                android:checked="true"/>
            </LinearLayout>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edittextprofile"
                android:padding="5dp"
                android:layout_marginBottom="20dp"
                android:id="@+id/editScore"
                android:inputType="number"/>

        </LinearLayout>


    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/button"
        android:background="@drawable/btnshapereg"
        android:text="@string/save_btn"
        android:textColor="@android:color/white"
        android:drawableRight="@drawable/icon_ok"
        android:id="@+id/btnSave"
        />

</LinearLayout>